--- a/deploy/setup-github-runner-hosts.yml
+++ b/deploy/setup-github-runner-hosts.yml
@@ -3,6 +3,8 @@
   become: yes
   vars:
     runner_user: github
+  roles:
+    - rust
   tasks:
     - name: Ensure '{{ runner_user }}' user exists
       user:
