--- a/deploy/install-github-runner-hosts.yml
+++ b/deploy/install-github-runner-hosts.yml
@@ -1,14 +1,9 @@
 - name: Install GitHub Actions runners
   hosts: github_runners
-  become: no
-  remote_user: "{{ runner_user }}"
+  become: true
   vars:
-    github_actions_runner_version: "latest"
-    github_actions_runner_name_prefix: "runner"
-    github_actions_runner_count: "{{ ansible_processor_vcpus }}"
-    github_actions_runner_url: "https://github.com/left-curve"
-    github_actions_runner_workdir: "/home/{{ runner_user }}/_work"
-    github_token: "{{ lookup('env', 'GITHUB_TOKEN') }}"
-    github_org: left-curve
+    github_account: left-curve
+    runner_org: yes
+    access_token: "{{ lookup('env', 'GITHUB_TOKEN') }}"
   roles:
     - MonolithProjects.github_actions_runner
