--- a/deploy/roles/common/tasks/main.yml
+++ b/deploy/roles/common/tasks/main.yml
@@ -1,3 +1,22 @@
+- name: Install locales package
+  apt:
+    name: locales
+    state: present
+    update_cache: yes
+
+- name: Generate en_US.UTF-8 locale
+  command: locale-gen en_US.UTF-8
+
+- name: Set default system locale
+  lineinfile:
+    path: /etc/default/locale
+    regexp: '^LANG='
+    line: 'LANG=en_US.UTF-8'
+    create: yes
+
+- name: Reconfigure locales
+  command: dpkg-reconfigure --frontend=noninteractive locales
+
 - name: Set hostname in /etc/hostname
   hostname:
     name: "{{ hostname }}"
@@ -23,6 +42,8 @@
       - gnupg
       - apt-transport-https
       - vim
+      - btop
+      - htop
     state: present
     update_cache: yes
 
