--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,6 +30,8 @@ jobs:
     needs: [format]
     name: Test + Lint
     runs-on: self-hosted
+    container:
+      image: rust:slim
     env:
       PGDATABASE: grug_test
       DB_HOST: postgres
@@ -77,7 +79,9 @@ jobs:
 
   format:
     name: Format
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    container:
+      image: rust:slim
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
