--- a/deploy/install-github-runner-hosts.yml
+++ b/deploy/install-github-runner-hosts.yml
@@ -8,24 +8,23 @@
   roles:
     - MonolithProjects.github_actions_runner
   tasks:
-    - name: Add ~/.cargo/bin to PATH in GitHub Actions runner systemd service
-      ansible.builtin.lineinfile:
+    - name: Set environment variables in GitHub Actions runner systemd service
+      blockinfile:
         path: "/etc/systemd/system/actions.runner.{{ github_account }}.{{ hostname }}.service"
-        regexp: '^Environment='
-        line: 'Environment="PATH=/home/{{ runner_user }}/.cargo/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"'
-        state: present
+        marker: "# {mark} GitHub Runner Env Vars"
+        block: |
+          Environment="PATH=/home/{{ runner_user }}/.cargo/bin:/usr/local/cargo/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       notify:
         - Reload systemd
         - Restart github-actions-runner
       become: yes
 
-    - name: Ensure .bashrc includes ~/.cargo/bin for the runner user
-      ansible.builtin.lineinfile:
+    - name: Ensure Rust env vars are set in .bashrc for the runner user
+      blockinfile:
         path: "/home/{{ runner_user }}/.bashrc"
-        line: 'export PATH="$HOME/.cargo/bin:$PATH"'
-        state: present
-        owner: "{{ runner_user }}"
-        mode: '0644'
+        marker: "# {mark} Rust Env Vars"
+        block: |
+          export PATH="$HOME/.cargo/bin:$PATH"
       become: yes
       become_user: "{{ runner_user }}"
 
