--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,6 +51,7 @@ jobs:
           echo "CARGO_HOME=$CARGO_HOME"
           echo "PATH=$PATH"
           ls -la $CARGO_HOME/bin
+          printenv | sort
 
       # This ends up being 8GB and takes 60sec to pull, which is too slow just for formatting.
       # - uses: actions/cache@v4
