--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -66,7 +66,12 @@ jobs:
     name: Lint + Test
     runs-on: self-hosted
     container:
-      image: rust:slim
+      image: ghcr.io/left-curve/left-curve/native-builder
+      credentials:
+        username: ${{ secrets.GHCR_USERNAME }}
+        password: ${{ secrets.GHCR_TOKEN }}
+    permissions:
+      packages: read
     env:
       PGDATABASE: grug_test
       DB_HOST: postgres
