--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,8 +34,8 @@ jobs:
   format:
     name: Format
     runs-on: [self-hosted]
-    container:
-      image: rust:slim
+    # container:
+    #   image: rust:slim
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -64,10 +64,10 @@ jobs:
     needs: [format]
     name: Lint + Test
     runs-on: self-hosted
-    container:
-      image: ghcr.io/left-curve/left-curve/native-builder
-    permissions:
-      packages: read
+    # container:
+    #   image: ghcr.io/left-curve/left-curve/native-builder
+    # permissions:
+    #   packages: read
     env:
       PGDATABASE: grug_test
       DB_HOST: postgres
