--- a/docker/dango/Dockerfile
+++ b/docker/dango/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update && \
 
 COPY target/${TARGET_ARCH}/release/dango /usr/local/bin/dango
 
+# Expose the indexer httpd (8080) and Tendermint ABCI (26658) ports.
 EXPOSE 8080 26658
 
 # Run dango.
