--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,8 +37,9 @@ jobs:
   format:
     name: Format
     runs-on: [self-hosted]
-    container:
-      image: rust:slim
+    # Don't use this, it raises permissions issues on self hosted runners
+    # container:
+    #   image: rust:slim
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -67,10 +68,11 @@ jobs:
     needs: [format]
     name: Lint + Test
     runs-on: self-hosted
-    container:
-      image: ghcr.io/left-curve/left-curve/native-builder
-    permissions:
-      packages: read
+    # Don't use this, it raises permissions issues on self hosted runners
+    # container:
+    #   image: ghcr.io/left-curve/left-curve/native-builder
+    # permissions:
+    #   packages: read
     env:
       PGDATABASE: grug_test
       DB_HOST: postgres
