--- a/deploy/install-github-runner-hosts.yml
+++ b/deploy/install-github-runner-hosts.yml
@@ -12,6 +12,7 @@
       blockinfile:
         path: "/etc/systemd/system/actions.runner.{{ github_account }}.{{ hostname }}.service"
         marker: "# {mark} GitHub Runner Env Vars"
+        insertafter: '[Service]'
         block: |
           Environment="PATH=/home/{{ runner_user }}/.cargo/bin:/usr/local/cargo/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
           Environment="CARGO_HOME=/home/{{ runner_user }}/.cargo"
