--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -184,8 +184,13 @@ jobs:
               exit 1
           fi
 
-      - name: Install cross
+      - name: Install toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
         run: cargo install cross --git https://github.com/cross-rs/cross
+
+      - name: Install cross
 
       - name: Write Cross.toml
         run: |
