Add missing GH workflows (#668)
* Add missing GH workflows

* Add concurrency

* Fix

* Fix

* Switch to user mode

* Fix

* Fix

* Fix

* Fix

* Fix

* Fix

* Fix

* Fix

--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -16,15 +16,15 @@ services:
     tty: true
 
   dango:
-    image: leftcurve/dango:0.0.0-alpha.8
+    image: ghcr.io/left-curve/left-curve/dango:latest
     depends_on:
       - db
     ports:
       - 127.0.0.1:8080:8080
     volumes:
-      - ./configs/dango/config:/root/.dango/config
-      - ./data/dango/data:/root/.dango/data
-      - ./data/dango/indexer:/root/.dango/indexer
+      - ./configs/dango/config:/home/dango/.dango/config
+      - ./data/dango/data:/home/dango/.dango/data
+      - ./data/dango/indexer:/home/dango/.dango/indexer
     environment:
       - DB_HOST=db
       - DB_PORT=5432
@@ -34,12 +34,12 @@ services:
     tty: true
 
   cometbft:
-    image: leftcurve/cometbft:0.38.17
+    image: ghcr.io/left-curve/left-curve/cometbft:v0.38.17
     depends_on:
       - dango
     ports:
       - 127.0.0.1:26657:26657
     volumes:
-      - ./configs/cometbft/config:/root/.cometbft/config
-      - ./data/cometbft/data:/root/.cometbft/data
+      - ./configs/cometbft/config:/home/cometbft/.cometbft/config
+      - ./data/cometbft/data:/home/cometbft/.cometbft/data
     tty: true
