--- a/deploy/justfile
+++ b/deploy/justfile
@@ -14,6 +14,7 @@ setup:
     source .venv/bin/activate && pip install --upgrade pip
     source .venv/bin/activate && pip install ansible
     source .venv/bin/activate && ansible-galaxy install MonolithProjects.github_actions_runner
+    source .venv/bin/activate && ansible-galaxy collection install community.docker
 
 # Run the github runner installation playbooks
 install-runners:
