--- a/dango/gateway/Cargo.toml
+++ b/dango/gateway/Cargo.toml
@@ -4,7 +4,7 @@ categories    = { workspace = true }
 documentation = { workspace = true }
 edition       = { workspace = true }
 license       = { workspace = true }
-name          = "dango-alloy"
+name          = "dango-gateway"
 repository    = { workspace = true }
 rust-version  = { workspace = true }
 version       = { workspace = true }
