--- a/dango/genesis/Cargo.toml
+++ b/dango/genesis/Cargo.toml
@@ -15,9 +15,9 @@ dango-account-factory = { workspace = true, features = ["library"] }
 dango-account-margin  = { workspace = true, features = ["library"] }
 dango-account-multi   = { workspace = true, features = ["library"] }
 dango-account-spot    = { workspace = true, features = ["library"] }
-dango-alloy           = { workspace = true }
 dango-bank            = { workspace = true, features = ["library"] }
 dango-dex             = { workspace = true, features = ["library"] }
+dango-gateway         = { workspace = true, features = ["library"] }
 dango-lending         = { workspace = true, features = ["library"] }
 dango-oracle          = { workspace = true, features = ["library"] }
 dango-taxman          = { workspace = true, features = ["library"] }
