--- a/deploy/justfile
+++ b/deploy/justfile
@@ -7,16 +7,29 @@ default:
 provision:
   ansible-playbook -i inventory playbook.yml
 
-
 # Set up Python environment and install Ansible + role
 setup:
-    python3 -m venv .venv
-    source .venv/bin/activate && pip install --upgrade pip
-    source .venv/bin/activate && pip install ansible
-    source .venv/bin/activate && ansible-galaxy install MonolithProjects.github_actions_runner
-    source .venv/bin/activate && ansible-galaxy collection install community.docker
+  python3 -m venv .venv
+  source .venv/bin/activate && pip install --upgrade pip
+  source .venv/bin/activate && pip install ansible
+  source .venv/bin/activate && ansible-galaxy install MonolithProjects.github_actions_runner
+  source .venv/bin/activate && ansible-galaxy collection install community.docker
+  source .venv/bin/activate && ansible-galaxy role install artis3n.tailscale
 
 # Run the github runner installation playbooks
 install-runners:
-    source .venv/bin/activate && ansible-playbook -i inventory setup-github-runner-hosts.yml
-    source .venv/bin/activate && ansible-playbook -i inventory install-github-runner-hosts.yml
+  source .venv/bin/activate && ansible-playbook -i inventory setup-github-runner-hosts.yml
+  source .venv/bin/activate && ansible-playbook -i inventory install-github-runner-hosts.yml
+
+deploy-cometbft:
+  ansible-playbook cometbft.yml
+
+deploy-tailscale:
+  ansible-playbook tailscale.yml
+
+cometbft-logs:
+  ansible cometbft -m shell -a "docker logs cometbft -f"
+
+cometbft-init-key:
+  # Used to create a validator key
+  cometbft gen_validator --home ~/cometbft/
