--- a/deploy/requirements.yml
+++ b/deploy/requirements.yml
@@ -1,2 +1,9 @@
 collections:
   - name: community.docker
+roles:
+  - name: artis3n.tailscale
+    src: artis3n.tailscale
+    version: "0.5.1"
+  - name: MonolithProjects.github_actions_runner
+    src: MonolithProjects.github_actions_runner
+    version: "1.18.7"
