--- a/deploy/justfile
+++ b/deploy/justfile
@@ -5,7 +5,7 @@ default:
   @just --list
 
 provision:
-  ansible-playbook -i inventory playbook.yml
+  ansible-playbook playbook.yml
 
 # Set up Python environment and install Ansible + role
 setup:
@@ -16,8 +16,8 @@ setup:
 
 # Run the github runner installation playbooks
 install-runners:
-  source .venv/bin/activate && ansible-playbook -i inventory setup-github-runner-hosts.yml
-  source .venv/bin/activate && ansible-playbook -i inventory install-github-runner-hosts.yml
+  source .venv/bin/activate && ansible-playbook setup-github-runner-hosts.yml
+  source .venv/bin/activate && ansible-playbook install-github-runner-hosts.yml
 
 deploy-cometbft:
   ansible-playbook cometbft.yml
