--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -52,6 +52,7 @@ dango-gateway         = { workspace = true, features = ["library"] }
 dango-httpd           = { workspace = true }
 dango-lending         = { workspace = true, features = ["library"] }
 dango-oracle          = { workspace = true, features = ["library"] }
+dango-perps           = { workspace = true, features = ["library"] }
 hex                   = { workspace = true }
 home                  = { workspace = true }
 indexer-disk-saver    = { workspace = true }
