--- a/.github/workflows/book.yaml
+++ b/.github/workflows/book.yaml
@@ -1,5 +1,6 @@
 # Based on:
 # https://github.com/rust-lang/mdBook/wiki/Automated-Deployment%3A-GitHub-Actions
+# https://github.com/peaceiris/actions-gh-pages?tab=readme-ov-file#%EF%B8%8F-mdbook-rust
 
 name: Book
 
@@ -29,35 +30,21 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v4
 
-      - name: Install mdbook
-        run: |
-          tag=$(curl 'https://api.github.com/repos/rust-lang/mdbook/releases/latest' | jq -r '.tag_name')
-          url="https://github.com/rust-lang/mdbook/releases/download/${tag}/mdbook-${tag}-x86_64-unknown-linux-gnu.tar.gz"
-          mkdir mdbook
-          curl -sSL $url | tar -xz --directory=./mdbook
-          echo `pwd`/mdbook >> $GITHUB_PATH
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
 
-      - name: Install mdbook-katex
+      - name: Install mdbook and mdbook-katex
         run: |
-          tag=$(curl 'https://api.github.com/repos/lzanini/mdbook-katex/releases/latest' | jq -r '.tag_name')
-          url="https://github.com/lzanini/mdbook-katex/releases/download/${tag}/mdbook-${tag}-x86_64-unknown-linux-gnu.tar.gz"
-          mkdir mdbook-katex
-          curl -sSL $url | tar -xz --directory=./mdbook-katex
-          echo `pwd`/mdbook-katex >> $GITHUB_PATH
+          cargo install mdbook
+          cargo install mdbook-katex
 
       - name: Build book
-        working-directory: book
         run: mdbook build
 
-      - name: Setup pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: book/build
-
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./target/book/
