doc/ci: update docs and add mdbook deploy CI workflow (#677)
* add doc page on passive liquidity

* rename the left curve book to the dango book

* add mdbook deploy workflow

* use cargo

* Update book/dex/passive-liquidity/README.md

Co-authored-by: ellipsis-dev[bot] <65095814+ellipsis-dev[bot]@users.noreply.github.com>

* one command

* add a comment

* only publish when pushing to main

* better CI trigger conditions

* reorder items alphabetically

---------

Co-authored-by: ellipsis-dev[bot] <65095814+ellipsis-dev[bot]@users.noreply.github.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,22 +16,28 @@ on:
     paths:
       - ".github/workflows/rust.yml"
       - "dango/**"
+      - "docker/**"
       - "grug/**"
       - "hyperlane/**"
       - "indexer/**"
-      - "docker/**"
-      - "**.toml"
+      - "Cargo.toml"
+      - "Cargo.lock"
+      - "clippy.toml"
+      - "rustfmt.toml"
   pull_request:
     branches:
       - "*"
     paths:
       - ".github/workflows/rust.yml"
       - "dango/**"
+      - "docker/**"
       - "grug/**"
       - "hyperlane/**"
       - "indexer/**"
-      - "docker/**"
-      - "**.toml"
+      - "Cargo.toml"
+      - "Cargo.lock"
+      - "clippy.toml"
+      - "rustfmt.toml"
 
 jobs:
   format:
