--- a/.github/workflows/cometbft.yaml
+++ b/.github/workflows/cometbft.yaml
@@ -35,7 +35,7 @@ jobs:
 
   build-cometbft:
     needs: check-image
-    if: needs.check-image.outputs.skip_build == 'false'
+    # if: needs.check-image.outputs.skip_build == 'false'
     permissions:
       packages: write
     runs-on: self-hosted
