--- a/deploy/roles/cometbft/tasks/main.yml
+++ b/deploy/roles/cometbft/tasks/main.yml
@@ -40,11 +40,14 @@
     image: ghcr.io/left-curve/left-curve/cometbft:v0.38.17
     user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
     state: started
-    pull: always
-    recreate: true
+    # To force pulling the same tag again
+    # pull: always
+    # recreate: true
     restart_policy: unless-stopped
+    env:
+      HOME: /app
     ports:
       - "127.0.0.1:26657:26657"
     volumes:
-      - "{{ cometbft_target_dir }}:/root/.cometbft"
+      - "{{ cometbft_target_dir }}:/app/.cometbft"
     tty: true
