--- a/deploy/roles/rust/tasks/main.yml
+++ b/deploy/roles/rust/tasks/main.yml
@@ -27,6 +27,6 @@
     . "$HOME/.cargo/env"
     rustup component add clippy rustfmt rust-src
     rustup component add rustfmt clippy rust-src --toolchain nightly
-    cargo install mdbook
+    cargo install mdbook mdbook-katex
   args:
     executable: /bin/bash
