--- a/deploy/requirements.yml
+++ b/deploy/requirements.yml
@@ -1,5 +1,6 @@
 collections:
   - name: community.docker
+  - name: community.postgresql
 roles:
   - name: artis3n.tailscale
     src: artis3n.tailscale
