--- a/deploy/roles/cometbft/files/config/config.toml
+++ b/deploy/roles/cometbft/files/config/config.toml
@@ -16,7 +16,7 @@ version = "1.0.0"
 
 # TCP or UNIX socket address of the ABCI application,
 # or the name of an ABCI application compiled in with the CometBFT binary
-proxy_app = "tcp://dango:26658"
+proxy_app = "tcp://localhost:26658"
 
 # A custom human readable name for this node
 moniker = "dev"
