--- a/indexer/httpd-mock/Cargo.toml
+++ b/indexer/httpd-mock/Cargo.toml
@@ -19,7 +19,7 @@ dango-testing           = { workspace = true }
 grug-db-memory          = { workspace = true }
 grug-testing            = { workspace = true }
 grug-vm-rust            = { workspace = true }
-indexer-httpd           = { workspace = true }
+indexer-httpd           = { workspace = true, features = ["testing"] }
 indexer-sql             = { workspace = true, features = ["tracing"] }
 tokio                   = { workspace = true }
 tracing                 = { workspace = true }
