--- a/indexer/testing/Cargo.toml
+++ b/indexer/testing/Cargo.toml
@@ -26,6 +26,7 @@ grug-storage     = { workspace = true }
 grug-testing     = { workspace = true }
 grug-types       = { workspace = true }
 grug-vm-rust     = { workspace = true }
+indexer-httpd    = { workspace = true, features = ["testing"] }
 indexer-sql      = { workspace = true, features = ["tracing"] }
 tokio            = { workspace = true }
 tracing          = { workspace = true }
