--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "dango/dex",
   "dango/genesis",
   "dango/httpd",
+  "dango/httpd-mock",
   "dango/indexer/sql",
   "dango/indexer/sql-migration",
   "dango/lending",
@@ -166,6 +167,7 @@ dango-client                = { path = "dango/client" }
 dango-dex                   = { path = "dango/dex" }
 dango-genesis               = { path = "dango/genesis" }
 dango-httpd                 = { path = "dango/httpd" }
+dango-httpd-mock            = { path = "dango/httpd-mock" }
 dango-ibc-transfer          = { path = "dango/ibc-transfer" }
 dango-indexer-sql           = { path = "dango/indexer/sql" }
 dango-indexer-sql-migration = { path = "dango/indexer/sql-migration" }
