--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ members = [
   "dango/dex",
   "dango/genesis",
   "dango/httpd",
-  "dango/httpd-mock",
   "dango/indexer/sql",
   "dango/indexer/sql-migration",
   "dango/lending",
+  "dango/mocks/*",
   "dango/oracle",
   "dango/proposal-preparer",
   "dango/taxman",
@@ -167,11 +167,11 @@ dango-client                = { path = "dango/client" }
 dango-dex                   = { path = "dango/dex" }
 dango-genesis               = { path = "dango/genesis" }
 dango-httpd                 = { path = "dango/httpd" }
-dango-httpd-mock            = { path = "dango/httpd-mock" }
 dango-ibc-transfer          = { path = "dango/ibc-transfer" }
 dango-indexer-sql           = { path = "dango/indexer/sql" }
 dango-indexer-sql-migration = { path = "dango/indexer/sql-migration" }
 dango-lending               = { path = "dango/lending" }
+dango-mock-httpd            = { path = "dango/mock/httpd" }
 dango-oracle                = { path = "dango/oracle" }
 dango-proposal-preparer     = { path = "dango/proposal-preparer" }
 dango-taxman                = { path = "dango/taxman" }
