--- a/deploy/roles/dango/files/config/app.toml
+++ b/deploy/roles/dango/files/config/app.toml
@@ -56,10 +56,10 @@ port = 8080
 [tendermint]
 
 # Tendermint RPC listening address.
-rpc_addr = "http://localhost:26657"
+rpc_addr = "http://cometbft:26657"
 
 # Tendermint ABCI listening address.
-abci_addr = "0.0.0.0:26658"
+abci_addr = "cometbft:26658"
 
 ################################################################################
 ###                        Transaction Configuration                         ###
