--- a/deploy/roles/dango/defaults/main.yml
+++ b/deploy/roles/dango/defaults/main.yml
@@ -7,3 +7,5 @@ db_pass: "{{ lookup('env','DB_PASSWORD') }}"
 db_user: "{{ lookup('env','DB_USER', default='postgres') }}"
 db_host: "127.0.0.1"
 db_port: 5432
+host_port: 8080
+dango_db_host: "postgres"
